[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assests/PlayerRed.png" type="Texture" id=1]
[ext_resource path="res://Assests/EnemyRed.png" type="Texture" id=2]
[ext_resource path="res://Assests/745712main_galaxies_lg_full.jpg" type="Texture" id=3]
[ext_resource path="res://Assests/PlayerGreen.png" type="Texture" id=4]
[ext_resource path="res://Assests/Player2.png" type="Texture" id=5]
[ext_resource path="res://Assests/Player3.png" type="Texture" id=6]
[ext_resource path="res://Assests/Player4.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=8]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 1 ) ],
"loop": true,
"name": "transform",
"speed": 5.0
} ]

[node name="Game" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 576.041, 348.218 )
scale = Vector2( 0.440267, 0.445292 )
texture = ExtResource( 3 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 505.142, 527.102 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
pause_mode = 1
frames = SubResource( 1 )
animation = "transform"
speed_scale = 3.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
polygon = PoolVector2Array( 8, -31, 9.5, -25, 12.8, -25, 19, -18.8, 19, -11.8, 19.8, -11, 37, -11, 37, 6.3, 46, 17.3, 46, 26, 43.2, 26, 28, 27.8, 24.8, 31, 7, 31, 7, 28, 5.5, 22, -5, 22, -5, 28.8, -26, 31.2, -26, 29.7, -46, 25.6, -46, 17.3, -37, 6.3, -37, -11, -20.8, -11, -18.6, -20, -17, -20, -13, -25, -10, -25, -10, -31.2, -8, -32.2, -8, -34, 8, -34 )

[node name="Enemy" type="Node2D" parent="."]

[node name="Red" type="KinematicBody2D" parent="Enemy"]
position = Vector2( 67.7795, -139.96 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Enemy/Red"]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enemy/Red"]
polygon = PoolVector2Array( 50, -53.7, 60, -40.7, 60, -10, 57.3, -10, 42, -7.7, 42, -11, 40.5, -16, 39.1, -16, 29.1, -28, 24, -28, 24, 5.7, 6, 8.3, 6, 5, 4.2, -12, -4, -12, -4, 5.7, -22, 8.3, -22, 5, -23.9, -28, -29.2, -28, -40, -17.2, -40, -11.2, -43.2, -8, -56.8, -8, -60, -11.2, -60, -40.7, -50, -53.7, -50, -56, -6, -56, -6, -53.6, -4.9, -52, 4, -52, 4, -53.9, 50, -56.1 )

[node name="LazerGreen" type="Node2D" parent="."]

[node name="PlayerLazer" type="Node2D" parent="."]

[node name="ScreenClearer" type="Node2D" parent="."]

[node name="HUD" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Lives" type="Label" parent="HUD"]
margin_left = 824.533
margin_top = 2.50873
margin_right = 1019.53
margin_bottom = 50.5087
text = "Lives:
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
margin_left = 1.67242
margin_right = 196.672
margin_bottom = 48.0
text = "Score:
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explosions" type="Node2D" parent="."]
[connection signal="lives_changed" from="Player" to="HUD" method="_on_Player_lives_changed"]
[connection signal="score_changed" from="Player" to="HUD" method="_on_Player_score_changed"]
